# SaferCode

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  safercode.pc.in
cmake/: CompilerWarnings.cmake  SaferCodeConfig.cmake.in
docs/: Doxyfile  examples.html
docs/api/html/: annotated.html  classes.html  doxygen_crawl.html  files.html  (+42 more)
examples/: CMakeLists.txt
examples/01_hello_arena/: README.md  main.c
examples/02_string_builder/: README.md  main.c
examples/03_reftracker/: README.md  main.c
examples/04_logging/: README.md  main.c
examples/05_arena_scratch_pattern/: README.md  main.c
examples/06_url_parser/: README.md  main.c
examples/07_log_formatter/: README.md  main.c
examples/08_word_wrapper/: README.md  main.c
examples/09_csv_to_json/: README.md  main.c
include/: sc_arena.h  sc_log.h  sc_memfile.h  sc_panic.h  sc_raii.h  sc_reftracker.h  sc_sentinel.h  sc_string.h  sc_string_builder.h  sc_version.h
tests/: CMakeLists.txt  test_all.c  test_sc_arena.c  test_sc_log.c  test_sc_memfile.c  test_sc_panic.c  test_sc_raii.c  test_sc_reftracker.c  test_sc_sentinel.c  test_sc_string.c  test_sc_string_builder.c  test_sc_version.c
tests/framework/: greatest.h
tools/sc_checker/: README.md  check_tier1_regex.py  check_tier2_ast.py  check_tier3_callgraph.py  sc_check.py
tutorials/01_why_arenas/: solution.c  tutorial.md
tutorials/02_raii_resource_safety/: solution.c  tutorial.md
tutorials/03_sentinel_debugging/: solution.c  tutorial.md
tutorials/04_arena_pool_combo/: solution.c  tutorial.md
tutorials/05_config_file_reader/: solution.c  tutorial.md
tutorials/06_expression_evaluator/: solution.c  tutorial.md
tutorials/07_http_request_parser/: solution.c  tutorial.md
(+37 files in other folders)
